0.10.1/_sources/gettingstarted/examples/gallery/auto_examples_core/c_importer/plot_generic_read.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_core/c_importer/plot_generic_read.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_generic_read.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_generic_read.py:


Reading datasets
================

In this example, we show the use of the generic `read` method to create dataset
either from local or remote files.

.. GENERATED FROM PYTHON SOURCE LINES 16-17

First we need to import the spectrochempy API package

.. GENERATED FROM PYTHON SOURCE LINES 17-25

.. code-block:: default

    import os
    from pathlib import Path

    import spectrochempy as scp

    TEST_FILE = Path(os.environ.get("TEST_FILE", "irdata/nh4y-activation.spg"))
    TEST_FOLDER = Path(os.environ.get("TEST_FOLDER", "irdata"))








.. GENERATED FROM PYTHON SOURCE LINES 26-30

Import dataset from local files
-------------------------------
Read a IR data recorded in Omnic format (``.spg`` extension).
We just pass the file name as parameter.

.. GENERATED FROM PYTHON SOURCE LINES 30-33

.. code-block:: default

    dataset = scp.read(TEST_FILE)
    print(dataset)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    NDDataset: [float64] a.u. (shape: (y:55, x:5549))




.. GENERATED FROM PYTHON SOURCE LINES 34-36

.. code-block:: default

    if dataset is not None:
        _ = dataset.plot(style="paper")



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_generic_read_001.png
   :alt: plot generic read
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_generic_read_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 37-38

When using `read`, we can pass filename as a `str` or a `~pathlib.Path` object.

.. GENERATED FROM PYTHON SOURCE LINES 38-41

.. code-block:: default

    filename = TEST_FILE
    dataset = scp.read(filename)








.. GENERATED FROM PYTHON SOURCE LINES 42-44

Note that is the file is not found in the current working directory, `SpectroChemPy`
will try to find it in the ``datadir`` directory defined in `preferences` :

.. GENERATED FROM PYTHON SOURCE LINES 44-47

.. code-block:: default

    datadir = scp.preferences.datadir
    print(datadir)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/.spectrochempy/testdata




.. GENERATED FROM PYTHON SOURCE LINES 48-54

If the supplied argument is a directory, then the whole directory is read at once.
By default, the different files will be merged along the first dimension (y).
However, for this to work, the second dimension (x) must be compatible (same size)
or else a WARNING appears. To avoid the warning and get individual spectra, you can
set ``merge`` to `False` . This test-data directory may also contain historical
trusted native `.scp` archives, which require explicit legacy opt-in.

.. GENERATED FROM PYTHON SOURCE LINES 54-57

.. code-block:: default

    dataset_list = scp.read(TEST_FOLDER, merge=False, allow_unsafe_legacy=True)
    print(dataset_list)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    [NDDataset: [float64] a.u. (shape: (y:19, x:3112)), NDDataset: [float64] a.u. (shape: (y:55, x:5549)), NDDataset: [float64] unitless (shape: (y:1, x:3736))]




.. GENERATED FROM PYTHON SOURCE LINES 58-60

to get full details on the parameters that can be used, look at the API documentation:
`spectrochempy.read` .

.. GENERATED FROM PYTHON SOURCE LINES 62-65

Import dataset from remote files
--------------------------------
To download and read file from remote server you can use urls.

.. GENERATED FROM PYTHON SOURCE LINES 65-94

.. code-block:: default

    try:
        dataset_list = scp.read("http://www.eigenvector.com/data/Corn/corn.mat")
    except FileNotFoundError:
        dataset_list = None
        print("Eigenvector corn dataset not reachable; skipping remote import examples.")
    else:
        # %%
        # In this case the matlab data contains 7 arrays that have been automatically
        # transformed to `NDDataset` .
        for nd in dataset_list:
            print(f"{nd.name} : {nd.shape}")

        # %%
        # The `eigenvector.com <eigenvector.com>`__ website contains the same data in a
        # compressed (zipped) format:
        # `corn.mat_.zip <https://eigenvector.com/wp-content/uploads/2019/06/corn.mat_.zip>`__ .
        # This can also be used by the `read` method.
        dataset_list = scp.read(
            "https://eigenvector.com/wp-content/uploads/2019/06/corn.mat_.zip"
        )
        print(dataset_list)

        # %%
        # Plot each of the datasets
        dataset_list[-1].plot()
        dataset_list[-2].plot()
        dataset_list[-3].plot()
        dataset_list[-4].plot()




.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_generic_read_002.png
         :alt: plot generic read
         :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_generic_read_002.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_generic_read_003.png
         :alt: plot generic read
         :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_generic_read_003.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_generic_read_004.png
         :alt: plot generic read
         :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_generic_read_004.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_generic_read_005.png
         :alt: plot generic read
         :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_generic_read_005.png
         :class: sphx-glr-multi-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    mp6spec : (240, 700)
    m5nbs : (3, 700)
    mp6nbs : (8, 700)
    propvals : (80, 4)
    [NDDataset: [float64] unitless (shape: (y:240, x:700)), NDDataset: [float64] unitless (shape: (y:3, x:700)), NDDataset: [float64] unitless (shape: (y:8, x:700)), NDDataset: [float64] unitless (shape: (y:80, x:4))]




.. GENERATED FROM PYTHON SOURCE LINES 95-97

This ends the example ! The following line can be uncommented if no plot shows when
running the .py script with python

.. GENERATED FROM PYTHON SOURCE LINES 97-99

.. code-block:: default


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  2.446 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_generic_read.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_generic_read.py <plot_generic_read.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_generic_read.ipynb <plot_generic_read.ipynb>`
