0.12.5/_sources/gettingstarted/examples/gallery/auto_examples_core/c_importer/plot_generic_read.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_core/c_importer/plot_generic_read.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_generic_read.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_generic_read.py:


Reading datasets
================

In this example, we show the use of the generic ``read`` method to create dataset
either from local or remote files.

.. GENERATED FROM PYTHON SOURCE LINES 16-17

First we need to import the spectrochempy API package

.. GENERATED FROM PYTHON SOURCE LINES 17-21

.. code-block:: Python

    from pathlib import Path

    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 22-26

Import dataset from local files
-------------------------------
Read a IR data recorded in Omnic format (``.spg`` extension).
We just pass the file name as parameter.

.. GENERATED FROM PYTHON SOURCE LINES 26-29

.. code-block:: Python

    dataset = scp.read("irdata/nh4y-activation.spg")
    dataset






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div class="scp-output"><details><summary>NDDataset [nh4y-activation] — float64, shape: (y:55, x:5549), a.u.</summary>
    <div class="scp-output section"><div class="attr-name">name</div><div>:</div><div class="attr-value">nh4y-activation</div></div><div class="scp-output section"><div class="attr-name">author</div><div>:</div><div class="attr-value">runner@runnervm76f27</div></div><div class="scp-output section"><div class="attr-name">created</div><div>:</div><div class="attr-value">2026-08-21 13:16:20+00:00</div></div><div class="scp-output section"><div class="attr-name">description</div><div>:</div><div class="attr-value">Omnic title: NH4Y-activation.SPG<br/>Omnic filename: /home/runner/.spectrochempy/testdata/irdata/nh4y-activation.spg</div></div><div class="scp-output section"><div class="attr-name">history</div><div>:</div><div class="attr-value">2026-08-21 13:16:20+00:00> Imported from spg file /home/runner/.spectrochempy/testdata/irdata/nh4y-activation.spg.<br/>2026-08-21 13:16:20+00:00> Sorted by date</div></div><div class="scp-output section"><details><summary>Data</summary>
    <div class="scp-output section"><div class="attr-name">title</div><div>:</div><div class="attr-value">absorbance</div></div><div class="scp-output section"><div class="attr-name">values</div><div>:</div><div class="attr-value"> <div class="numeric">[[   2.057    2.061 ...    2.013    2.012]<br/> [   2.033    2.037 ...    1.913    1.911]<br/> ...<br/> [   1.794    1.791 ...    1.198    1.198]<br/> [   1.816    1.815 ...     1.24    1.238]] a.u.</div></div></div><div class="scp-output section"><div class="attr-name">shape</div><div>:</div><div class="attr-value">(y:55, x:5549)</div></div>
    </details></div><div class="scp-output section"><details><summary>Dimension `x`</summary>
    <div class="scp-output section"><div class="attr-name">size</div><div>:</div><div class="attr-value">5549</div></div><div class="scp-output section"><div class="attr-name">title</div><div>:</div><div class="attr-value">wavenumbers</div></div><div class="scp-output section"><div class="attr-name">coordinates</div><div>:</div><div class="attr-value"> <div class="numeric">[    6000     5999 ...    650.9    649.9] cm⁻¹</div></div></div>
    </details></div><div class="scp-output section"><details><summary>Dimension `y`</summary>
    <div class="scp-output section"><div class="attr-name">size</div><div>:</div><div class="attr-value">55</div></div><div class="scp-output section"><div class="attr-name">title</div><div>:</div><div class="attr-value">acquisition timestamp (GMT)</div></div><div class="scp-output section"><div class="attr-name">coordinates</div><div>:</div><div class="attr-value"> <div class="numeric">[1.468e+09 1.468e+09 ... 1.468e+09 1.468e+09] s</div></div></div><div class="scp-output section"><div class="attr-name">labels</div><div>:</div><div class="attr-value"> <div class="label">[[  2016-07-06 19:03:14+00:00   2016-07-06 19:13:14+00:00 ...   2016-07-07 04:03:17+00:00   2016-07-07 04:13:17+00:00]<br/> [  vz0466.spa, Wed Jul 06 21:00:38 2016 (GMT+02:00)   vz0467.spa, Wed Jul 06 21:10:38 2016 (GMT+02:00) ...<br/>    vz0520.spa, Thu Jul 07 06:00:41 2016 (GMT+02:00)   vz0521.spa, Thu Jul 07 06:10:41 2016 (GMT+02:00)]]</div></div></div>
    </details></div>
    </details></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 30-33

.. code-block:: Python

    if dataset is not None:
        _ = dataset.plot(style="paper")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_generic_read_001.png
   :alt: plot generic read
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_generic_read_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 34-35

When using ``read``, we can pass filename as a ``str`` or a ``pathlib.Path`` object.

.. GENERATED FROM PYTHON SOURCE LINES 35-38

.. code-block:: Python

    filename = Path("irdata/nh4y-activation.spg")
    dataset = scp.read(filename)








.. GENERATED FROM PYTHON SOURCE LINES 39-45

If the supplied argument is a directory, then the whole directory is read at once.
By default, the different files will be merged along the first dimension (y).
However, for this to work, the second dimension (x) must be compatible (same size)
or else a WARNING appears. To avoid the warning and get individual spectra, you can
set ``merge`` to ``False`` . This test-data directory may also contain historical
trusted native ``.scp`` archives, which require explicit legacy opt-in.

.. GENERATED FROM PYTHON SOURCE LINES 45-48

.. code-block:: Python

    dataset_list = scp.read("irdata", merge=False, allow_unsafe_legacy=True)
    print(dataset_list)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    [NDDataset: [float64] a.u. (shape: (y:19, x:3112)), NDDataset: [float64] a.u. (shape: (y:55, x:5549)), NDDataset: [float64] unitless (shape: (y:1, x:3736))]




.. GENERATED FROM PYTHON SOURCE LINES 49-51

to get full details on the parameters that can be used, look at the API documentation:
``spectrochempy.read`` .

.. GENERATED FROM PYTHON SOURCE LINES 53-56

Import dataset from remote files
--------------------------------
To download and read file from remote server you can use urls.

.. GENERATED FROM PYTHON SOURCE LINES 56-85

.. code-block:: Python

    try:
        dataset_list = scp.read("http://www.eigenvector.com/data/Corn/corn.mat")
    except FileNotFoundError:
        dataset_list = None
        print("Eigenvector corn dataset not reachable; skipping remote import examples.")
    else:
        # %%
        # In this case the matlab data contains 7 arrays that have been automatically
        # transformed to ``NDDataset`` .
        for nd in dataset_list:
            print(f"{nd.name} : {nd.shape}")

        # %%
        # The `eigenvector.com <eigenvector.com>`__ website contains the same data in a
        # compressed (zipped) format:
        # `corn.mat_.zip <https://eigenvector.com/wp-content/uploads/2019/06/corn.mat_.zip>`__ .
        # This can also be used by the ``read`` method.
        dataset_list = scp.read(
            "https://eigenvector.com/wp-content/uploads/2019/06/corn.mat_.zip"
        )
        print(dataset_list)

        # %%
        # Plot each of the datasets
        _ = dataset_list[-1].plot()
        _ = dataset_list[-2].plot()
        _ = dataset_list[-3].plot()
        _ = dataset_list[-4].plot()




.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_generic_read_002.png
         :alt: plot generic read
         :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_generic_read_002.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_generic_read_003.png
         :alt: plot generic read
         :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_generic_read_003.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_generic_read_004.png
         :alt: plot generic read
         :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_generic_read_004.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_generic_read_005.png
         :alt: plot generic read
         :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_generic_read_005.png
         :class: sphx-glr-multi-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    NDDataset_7fbb5aac : (240, 700)
    m5nbs : (3, 700)
    NDDataset_7fbb5b20 : (8, 700)
    propvals : (80, 4)
    [NDDataset: [float64] unitless (shape: (y:240, x:700)), NDDataset: [float64] unitless (shape: (y:3, x:700)), NDDataset: [float64] unitless (shape: (y:8, x:700)), NDDataset: [float64] unitless (shape: (y:80, x:4))]




.. GENERATED FROM PYTHON SOURCE LINES 86-91

.. code-block:: Python


    # Uncomment the following line to display all figures when running the script
    # directly with Python.
    #
    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 2.983 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_generic_read.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_generic_read.ipynb <plot_generic_read.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_generic_read.py <plot_generic_read.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_generic_read.zip <plot_generic_read.zip>`
